--- a/views/login.html
+++ b/views/login.html
@@ -28,12 +28,13 @@
             </div>
             <div class="mb-3">
               <label for="password" class="form-label">Contraseña</label>
-              <div class="inputGroup">
-                <input type="password" class="form-control " id="password" name="password" required>
-                <i class="bx bxs-hide" id="showPassword"></i>
-              </div>
+              <input type="password" class="form-control " id="password" name="password" required>
               <div class="invalid-feedback animate__animated animate__headShake">
                 Usuario o contraseña incorrecto.
+              </div>
+              <div>
+                <input type="checkbox" name="showPassword" id="showPassword">
+                <label for="showPassword">Mostrar contraseña</label>
               </div>
             </div>
             <button type="submit" class="btn btn-primary" id="btnIniciarSesion">Iniciar sesión</button>
@@ -41,10 +42,7 @@
         </div>
       </div>
     </div>
-    
-
   </main>
-
   <footer></footer>
   <script type="module" src="../JS/login.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
