--- a/styles/login.css
+++ b/styles/login.css
@@ -51,7 +51,7 @@ main {
   color: #000000;
 }
 
-.bx {
+/* .bx {
   font-size: 30px;
   cursor: pointer;
 }
@@ -72,5 +72,5 @@ main {
     left: 410px;
   }
   
-}
+} */
 
