--- a/views/admin.html
+++ b/views/admin.html
@@ -17,25 +17,13 @@
     <main>
       <h1>Panel de administrador</h1>
 
-      <table
-        id="admin"
-        class="table table-bordered table-striped table-responsive mt-5"
-      >
-        <thead>
-          <tr>
-            <th>Producto</th>
-            <th>Precio</th>
-            <th>Imagen</th>
-            <th>Categorias</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody id="tbody"></tbody>
-      </table>
+      <button>
+        <a href="../views/productos.html">Administrar Productos</a>
+      </button>
+      <button><a href="#">Administrar Usuarios</a></button>
     </main>
 
     <footer></footer>
-    <script type="module" src="../JS/admin.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
