--- a/styles/index.css
+++ b/styles/index.css
@@ -65,7 +65,7 @@ main {
 }
 
 #bodyLogin {
-  background: url('https://png.pngtree.com/background/20211215/original/pngtree-clothing-mens-clothing-store-shopping-summer-clothing-photography-map-with-map-picture-image_1485281.jpg') no-repeat;
+  background: url('https://i.ibb.co/YbY0zsf/Dise-o-sin-t-tulo-11.png') no-repeat;
   background-size: cover;
   background-position: center;
 }
