--- a/views/login.html
+++ b/views/login.html
@@ -85,7 +85,7 @@
         <div class="border-top mt-3 d-flex flex-column justify-content-center">
           <h6 class="text-center">o inicie sesión con</h6>
           <div class="d-flex justify-content-center">
-            <button class="btn btn-dark"><img style="width: 20px;" src="https://i.ibb.co/f17x8mb/buscar.png" alt="logoGoogle"></button>
+            <button class="btn btn-dark me-2"><img style="width: 20px;" src="https://i.ibb.co/f17x8mb/buscar.png" alt="logoGoogle"></button>
             <button class="btn btn-dark"><img style="width: 20px;" src="https://i.ibb.co/hHVxfL2/meta.png" alt="logoMeta"></button>
           </div>
         </div>
