--- a/views/login.html
+++ b/views/login.html
@@ -42,7 +42,7 @@
                   name="email"
                 />
                 <div
-                  class="invalid-feedback animate__animated animate__headShake">
+                  class="invalid-feedback animate__animated animate__headShake mjeIncorrecto">
                   Usuario o contraseña incorrecto.
                 </div>
               </div>
@@ -56,7 +56,7 @@
                   required
                 />
                 <div
-                  class="invalid-feedback animate__animated animate__headShake"
+                  class="invalid-feedback animate__animated animate__headShake mjeIncorrecto"
                 >
                   Usuario o contraseña incorrecto.
                 </div>
@@ -67,9 +67,9 @@
                       name="showPassword"
                       id="showPassword"
                     />
-                    <label for="showPassword">Mostrar contraseña</label>
+                    <label for="showPassword" class="fs-6">Mostrar contraseña</label>
                   </div>
-                  <a href="#" class="text-decoration-none link-secondary">Olvidaste la contraseña?</a>
+                  <a href="#" class=" link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover fs-6 ">Olvidaste la contraseña?</a>
                 </div>
               </div>
               <button
@@ -83,10 +83,13 @@
           </div>
         </div>
         <div class="border-top mt-3 d-flex flex-column justify-content-center">
-          <h6 class="text-center">o inicie sesión con</h6>
+          <h6 class="text-center">o inicia sesión con</h6>
           <div class="d-flex justify-content-center">
             <button class="btn btn-dark me-2"><img style="width: 20px;" src="https://i.ibb.co/f17x8mb/buscar.png" alt="logoGoogle"></button>
             <button class="btn btn-dark"><img style="width: 20px;" src="https://i.ibb.co/hHVxfL2/meta.png" alt="logoMeta"></button>
+          </div>
+          <div class="d-flex justify-content-center mt-3">
+            <p>Aún no tienes cuenta? <a href="#" class="fw-semibold link-warning">Registrate</a></p>
           </div>
         </div>
       </div>
