Add Product crud

--- a/views/admin.html
+++ b/views/admin.html
@@ -18,7 +18,12 @@
       <h1>Panel de administrador</h1>
 
       <button>
-        <a href="../views/productos.html">Administrar Productos</a>
+        <a href="../views/productos.html"
+          ><img
+            src="../Resources/admin-productos.jpg"
+            alt=""
+            style="width: 270px; height: 250px"
+        /></a>
       </button>
       <button><a href="#">Administrar Usuarios</a></button>
     </main>
@@ -29,5 +34,6 @@
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
       crossorigin="anonymous"
     ></script>
+    <script type="module" src="../JS/admin.js"></script>
   </body>
 </html>
