--- a/views/productos.html
+++ b/views/productos.html
@@ -124,6 +124,12 @@
                   </select>
                 </div>
                 <button type="submit" class="btn btn-primary">Crear</button>
+                <button
+                  hidden
+                  type="button"
+                  name="idHidden"
+                  id="idHidden"
+                ></button>
               </form>
             </div>
             <div class="modal-footer"></div>
