--- a/styles/index.css
+++ b/styles/index.css
@@ -34,10 +34,14 @@ main {
 }
 
 #btnIniciarSesion {
-  background-color: var(--colorSecond);
-  border: 1px solid var(--colorSecond);
+  background-color: var(--colorPrimary);
+  border: 1px solid var(--colorPrimary);
   color: #000000;
   font-weight: 600;
+}
+
+#btnIniciarSesion:hover {
+  background-color: #c58c22;
 }
 
 .btnCerrarSesion {
@@ -65,16 +69,17 @@ main {
 }
 
 #bodyLogin {
-  background: url('https://i.ibb.co/nD3tfGn/5.png') no-repeat;
+  background: url('../Resources/fondoLogin.webp') no-repeat;
   background-size: cover;
   background-position: center;
+  margin-top: 80px;
 }
 
 #email, #password{
   background: transparent;
-  color: #000000;
 }
 
-#email::placeholder, #password::placeholder {
-  color: #000000;
+#labelPassword, #forgotPassword {
+  font-size: small;
 }
+
