--- a/views/login.html
+++ b/views/login.html
@@ -62,13 +62,14 @@
                 <div class="d-flex justify-content-between">
                   <div>
                     <input
+                      class="mt-2"
                       type="checkbox"
                       name="showPassword"
                       id="showPassword"
                     />
                     <label for="showPassword" id="labelPassword">Mostrar contraseña</label>
                   </div>
-                  <a href="#" class=" link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover" id="forgotPassword">Olvidaste la contraseña?</a>
+                  <a href="#" class=" link-body-emphasis link-offset-2 link-underline-opacity-25 link-underline-opacity-75-hover mt-2" id="forgotPassword">Olvidaste la contraseña?</a>
                 </div>
               </div>
               <button
