--- a/views/productos.html
+++ b/views/productos.html
@@ -25,11 +25,11 @@
       </div>
 
       <button
-        class="btn btn-primary mt-5 mx-auto d-block"
+        class="btn btn-light mt-5 mx-auto d-block"
         data-bs-toggle="modal"
         data-bs-target="#productModal"
       >
-        Crear producto
+        <p class="m-0 p-0 fs-5 fw-bold">Nuevo producto</p>
       </button>
       <table
         id="admin"
