Terminado funcionalidades producto

--- a/views/productos.html
+++ b/views/productos.html
@@ -139,6 +139,16 @@
                     <option value="Sweater">Sweater</option>
                     <option value="Pantalones">Pantalones</option>
                     <option value="Bermudas">Bermudas</option>
+                    <option value="Zapatos">Zapatos</option>
+                    <option value="Accesorios">Accesorios</option>
+                    <option value="Calzado">Calzado</option>
+                    <option value="Bolsos">Bolsos</option>
+                    <option value="Buzos">Buzos</option>
+                    <option value="Gorras">Gorras</option>
+                    <option value="Shorts">Shorts</option>
+                    <option value="Vestidos">Vestidos</option>
+                    <option value="Sudaderas">Sudaderas</option>
+                    <option value="Carteras">Carteras</option>
                     <option value="Zapatillas">Zapatillas</option>
                   </select>
                 </div>
@@ -167,32 +177,6 @@
               </form>
             </div>
             <div class="modal-footer"></div>
-          </div>
-        </div>
-      </div>
-
-      <!-- Modal imagen -->
-      <div class="modal" id="photoModal" tabindex="-1">
-        <div class="modal-dialog">
-          <div class="modal-content">
-            <div class="modal-header">
-              <h5 class="modal-title" id="photoModalTitle">
-                Imagen del producto
-              </h5>
-              <button
-                type="button"
-                class="btn-close"
-                data-bs-dismiss="modal"
-                aria-label="Close"
-              ></button>
-            </div>
-            <div class="modal-body">
-              <img
-                alt="Imagen del producto"
-                id="productPhoto"
-                style="width: 100%"
-              />
-            </div>
           </div>
         </div>
       </div>
