--- a/views/productos.html
+++ b/views/productos.html
@@ -31,10 +31,10 @@
       >
         <p class="m-0 p-0 fs-5 fw-bold">Nuevo producto</p>
       </button>
-      <div class="table-responsive">
+      <div class="table-responsive w-75 mx-auto">
         <table
           id="admin"
-          class="table table-bordered table-striped mt-2 w-100 mx-auto"
+          class="table table-bordered table-striped border border-3 mt-2 mx-auto"
         >
           <thead>
             <tr>
