--- a/styles/admin.css
+++ b/styles/admin.css
@@ -1,27 +1,27 @@
+body {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%235f6052' fill-opacity='0.16' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
+}
+
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap");
+
+* {
+  font-family: "Roboto", sans-serif;
+}
+
+.cards-container {
+  gap: 20px;
+}
+
+.card {
+  transition: transform 0.2s;
+}
+
+.card:hover {
+  transform: scale(0.95);
+}
+
 .hero-banner {
   padding: 56px;
   background-color: #d8aa54;
-  text-align: center;
-}
-
-.admin {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-}
-
-.products {
-  width: 50%;
-  height: 600px;
-  background-color: #5c5a57;
-  border: 1px solid #d8aa54;
-  text-align: center;
-}
-
-.users {
-  width: 50%;
-  height: 600px;
-  background-color: #5c5a57;
-  border: 1px solid #d8aa54;
   text-align: center;
 }
