Terminado pagina error404

--- a/views/productos.html
+++ b/views/productos.html
@@ -17,8 +17,10 @@
     <header></header>
     <main>
       <div class="productPanelInfo w-100">
-        <h1 class="text-center">Control de Productos</h1>
-        <p class="text-center w-100 w-sm-75 mx-auto mt-4 mt-md-5 fs-5">
+        <h1 class="text-center text-dark fw-bold">Control de Productos</h1>
+        <p
+          class="text-center text-dark w-100 w-sm-75 mx-auto mt-4 mt-md-5 fs-5"
+        >
           Bienvenido, este es el panel de control de los productos Dawson. Como
           administrador, podrás crear, modificar y eliminar productos.
         </p>
