--- a/views/users.html
+++ b/views/users.html
@@ -17,8 +17,8 @@
     <header></header>
     <main>
       <div class="productPanelInfo w-100">
-        <h1 class="text-center">Control de Usuarios</h1>
-        <p class="text-center w-75 mx-auto mt-5 fs-5">
+        <h1 class="text-center text-dark fw-bold">Control de Usuarios</h1>
+        <p class="text-center text-dark w-75 mx-auto mt-5 fs-5">
           Bienvenido, este es el panel de control de los usuarios Dawson. Como
           admin podrás modificar el estado de los usuarios.
         </p>
