--- a/views/error404.html
+++ b/views/error404.html
@@ -14,16 +14,27 @@
   </head>
   <body>
     <main>
-      <h1 class="text-center text-light fs-1 fw-bold mt-5 p-2">Error 404.</h1>
-      <p class="text-center text-light fs-5">Página no encontrada</p>
-      <button class="btn btn-light mx-auto d-block">
-        <a href="../index.html">Volver</a>
-      </button>
+      <article class="text-center mt-5">
+        <i class="fa-solid fa-face-dizzy fa-2xl" style="color: #f50f0f"></i>
+      </article>
+      <h1 class="text-center text-light fs-1 fw-bold mt-3 p-2">Error 404.</h1>
+      <p class="text-center text-light fs-5 fw-bold">Página no encontrada</p>
       <div class="message"></div>
+      <button class="btn btn-light mt-5 mx-auto d-block">
+        <a
+          href="../index.html"
+          class="text-decoration-none text-dark fw-bold fs-5"
+          ><i class="fa-solid fa-arrow-left-long fa-2xl"></i> Volver</a
+        >
+      </button>
     </main>
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://kit.fontawesome.com/1cc1d82c1f.js"
       crossorigin="anonymous"
     ></script>
     <script src="../JS/error404.js"></script>
