Actualizado productos, eliminacion season

--- a/views/users.html
+++ b/views/users.html
@@ -24,22 +24,24 @@
         </p>
       </div>
 
-      <table
-        id="adminUsers"
-        class="table table-bordered table-striped table-responsive mt-2 w-75 mx-auto"
-      >
-        <thead>
-          <tr>
-            <th>Email</th>
-            <th>Nombre</th>
-            <th>Apellido</th>
-            <th>Rol</th>
-            <th>Estado</th>
-            <th>Acciones</th>
-          </tr>
-        </thead>
-        <tbody id="tbody"></tbody>
-      </table>
+      <div class="table-responsive w-75 mx-auto">
+        <table
+          id="adminUsers"
+          class="table table-bordered table-striped border border-3 mt-2 mx-auto"
+        >
+          <thead>
+            <tr>
+              <th>Email</th>
+              <th>Nombre</th>
+              <th>Apellido</th>
+              <th>Rol</th>
+              <th>Estado</th>
+              <th>Acciones</th>
+            </tr>
+          </thead>
+          <tbody id="tbody"></tbody>
+        </table>
+      </div>
 
       <div class="productBanner">
         <img src="../Resources/LogoDawson.png" alt="LogoDawson" />
