--- a/views/carrito.html
+++ b/views/carrito.html
@@ -29,7 +29,7 @@
       <button id="vaciarCarrito" class="btn btn-success btn-sm">Vaciar carrito</button>
       <div class="d-flex">
         <p>Total:</p>
-        <p id="total">$3000</p>
+        <p id="total"></p>
       </div>
       <a href="./error404.html" class="btn btn-warning btn-sm">Finalizar compra</a>
     </div>
