--- a/views/carrito.html
+++ b/views/carrito.html
@@ -18,7 +18,7 @@
         <p>Tu carrito esta vacio <i class="bi bi-emoji-frown"></i></p>
       </div>
       <div class="carritoProductos">
-        
+        <!-- Aqui se cargan los productos desde JS -->
       </div>
 
     </div>
