agregando pagina registro (Rocio)

--- a/views/login.html
+++ b/views/login.html
@@ -88,7 +88,7 @@
             <button class="btn btn-dark"><img style="width: 20px;" src="https://i.ibb.co/hHVxfL2/meta.png" alt="logoMeta"></button>
           </div>
           <div class="d-flex justify-content-center mt-3">
-            <p>Aún no tienes cuenta? <a href="#" class="fw-semibold link-warning">Registrate</a></p>
+            <p>Aún no tienes cuenta? <a href="../views/register.html" class="fw-semibold link-warning">Registrate</a></p>
           </div>
         </div>
       </div>
