--- a/views/register.html
+++ b/views/register.html
@@ -10,31 +10,32 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;1,700&family=Open+Sans:ital,wght@1,300&display=swap" rel="stylesheet">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <!-- <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'> -->
 
 </head>
 
 <body>
     <header></header>
     <main>
-          <!---FORMULARIO DE REGISTRO-->
-          <div class="form-Information">
-            <div class="form-Information-child">
-              <h2>Crear una Cuenta</h2>
-                <div class="Icons">
-                   <i class='bx bxl-google'></i>
-                   <i class='bx bxl-linkedin' ></i>
-                   <i class='bx bx-envelope' ></i>
-                </div>
-                <form class="d-flex flex-column justify-content-center w-50" id="formulario-register">  
-                    <input type="text" required placeholder="Nombre y Apellido"  id="NombreApellido">
-                    <input type="email" required placeholder="Correo Electrónico" id="email">
-                    <input type="password" required placeholder="Contraseña" id="contraseña">   
-                    <input type="password" required placeholder="Repetir Contraseña" id="repetirContraseña">
-                    <button type="submit" class="btn btn-primary">Registrarse</button>
-                </form>
-                </div>
-            </div>   
+      <!---FORMULARIO DE REGISTRO-->
+      <div class="form-Information">
+        <div class="form-Information-child">
+          <h2>Crear una Cuenta</h2>
+            <div class="Icons">
+              <i class='bx bxl-google'></i>
+              <i class='bx bxl-linkedin' ></i>
+              <i class='bx bx-envelope' ></i>
+            </div>
+            <form class="d-flex flex-column justify-content-center w-50" id="formulario-register">  
+              <input type="text" required placeholder="Nombre"  id="nombre">
+              <input type="text" required placeholder="Apellido"  id="apellido">
+              <input type="email" required placeholder="Correo Electrónico" id="email">
+              <input type="password" required placeholder="Contraseña" id="contraseña">   
+              <input type="password" required placeholder="Repetir Contraseña" id="repetirContraseña">
+              <button type="submit" class="btn btn-primary">Registrarse</button>
+            </form>
+        </div>
+      </div>   
     </main>
     <footer></footer>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
