agregando estilos (Rocio)

--- a/views/register.html
+++ b/views/register.html
@@ -20,20 +20,22 @@
       <!---FORMULARIO DE REGISTRO-->
       <div class="form-Information">
         <div class="form-Information-child">
-          <h2>Crear una Cuenta</h2>
+          <h2 class="text-center">Crear una Cuenta</h2>
             <div class="Icons">
               <i class='bx bxl-google'></i>
               <i class='bx bxl-linkedin' ></i>
               <i class='bx bx-envelope' ></i>
             </div>
-            <form class="d-flex flex-column justify-content-center w-50" id="formulario-register">  
-              <input type="text" required placeholder="Nombre"  id="nombre">
-              <input type="text" required placeholder="Apellido"  id="apellido">
-              <input type="email" required placeholder="Correo Electrónico" id="email">
-              <input type="password" required placeholder="Contraseña" id="contraseña">   
-              <input type="password" required placeholder="Repetir Contraseña" id="repetirContraseña">
-              <button type="submit" class="btn btn-primary">Registrarse</button>
-            </form>
+            <div class="container d-flex justify-content-center mt-5">
+              <form class="d-flex flex-column w-50" id="formulario-register">  
+                <input type="text" required placeholder="Nombre"  id="nombre">
+                <input type="text" required placeholder="Apellido"  id="apellido">
+                <input type="email" required placeholder="Correo Electrónico" id="email">
+                <input type="password" required placeholder="Contraseña" id="contraseña">   
+                <input type="password" required placeholder="Repetir Contraseña" id="repetirContraseña">
+                <button type="submit" class="btn btn-primary mt-3">Registrarse</button>
+              </form>
+            </div>
         </div>
       </div>   
     </main>
