--- a/styles/index.css
+++ b/styles/index.css
@@ -6,6 +6,11 @@
 
 main {
   margin-top: 60px;
+
+}
+
+.mainIndex {
+  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='28' height='49' viewBox='0 0 28 49'%3E%3Cg fill-rule='evenodd'%3E%3Cg id='hexagons' fill='%235f6052' fill-opacity='0.16' fill-rule='nonzero'%3E%3Cpath d='M13.99 9.25l13 7.5v15l-13 7.5L1 31.75v-15l12.99-7.5zM3 17.9v12.7l10.99 6.34 11-6.35V17.9l-11-6.34L3 17.9zM0 15l12.98-7.5V0h-2v6.35L0 12.69v2.3zm0 18.5L12.98 41v8h-2v-6.85L0 35.81v-2.3zM15 0v7.5L27.99 15H28v-2.31h-.01L17 6.35V0h-2zm0 49v-8l12.99-7.5H28v2.31h-.01L17 42.15V49h-2z'/%3E%3C/g%3E%3C/g%3E%3C/svg%3E");
 }
 
 .btnLogin {
@@ -90,13 +95,21 @@ main {
   font-weight: 600 !important;
 }
 
-.btnCategorie:hover {
-  background-color: #c58c22 !important;
+.active, .btnCategorie:hover {
+  background-color: rgb(196, 139, 33)important;
+  box-shadow: 0px 0px 7px 5px rgba(196, 139, 33, 0.45);
 }
 
 .cardProduct {
   box-shadow: 1px 0px 14px 2px #333333;
+  transition: all 0.5s ;
 }
+
+.cardProduct:hover {
+  box-shadow: 0px 0px 7px 5px rgba(255, 255, 255, 0.45);
+  width: 175px;
+}
+
 
 @media (min-width: 992px) {
   #login {
