--- a/views/carrito.html
+++ b/views/carrito.html
@@ -22,14 +22,14 @@
           <!-- Aqui se cargan los productos desde JS -->
         </div>
       </div>
-      <div class="d-flex mt-3 justify-content-between ms-3 me-3 contenedorSeguirComprando">
-        <a href="../index.html" class="btn btn-success btn-sm">Seguir comprando <i class="bi bi-arrow-90deg-left"></i></a>
+      <div class="d-flex mt-3 justify-content-between ms-3 me-3" id="contenedorSeguirComprando">
+        <a href="../index.html" class="btn btn-success btn-sm text-center">Seguir comprando <i class="bi bi-arrow-left"></i></a>
         <div class="d-flex carritoTotal fs-5 fw-semibold">
           <p>Total: $</p>
           <p id="total"></p>
         </div>
       </div>
-      <div class="carritoAcciones d-flex flex-column justify-content-end align-items-end me-3">
+      <div class="carritoAcciones d-flex flex-column justify-content-end align-items-end me-3" id="carritoAcciones">
         <button id="vaciarCarrito" class="btn btn-success btn-sm mb-3">Vaciar carrito</button>
         <a href="./error404.html" class="btn btn-warning btn-sm">Finalizar compra</a>
       </div>
