--- a/views/carrito.html
+++ b/views/carrito.html
@@ -23,7 +23,7 @@
         </div>
       </div>
       <div class="d-flex mt-3 justify-content-between ms-3 me-3" id="contenedorSeguirComprando">
-        <a href="../index.html" class="btn btn-success btn-sm text-center">Seguir comprando <i class="bi bi-arrow-left"></i></a>
+        <a href="../index.html" class="btn btn-success btn-sm text-center" id="btnSeguirComprando">Seguir comprando <i class="bi bi-arrow-left"></i></a>
         <div class="d-flex carritoTotal fs-5 fw-semibold">
           <p>Total: $</p>
           <p id="total"></p>
@@ -31,7 +31,7 @@
       </div>
       <div class="carritoAcciones d-flex flex-column justify-content-end align-items-end me-3" id="carritoAcciones">
         <button id="vaciarCarrito" class="btn btn-success btn-sm mb-3">Vaciar carrito</button>
-        <a href="./error404.html" class="btn btn-warning btn-sm">Finalizar compra</a>
+        <a href="./error404.html" class="btn btn-warning btn-sm" id="btnFinalizarCompra">Finalizar compra</a>
       </div>
 
     </div>
@@ -40,5 +40,6 @@
   <footer></footer>
   <script type="module" src="../JS/carrito.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 </body>
 </html>
