Arreglado responsive users

--- a/views/users.html
+++ b/views/users.html
@@ -16,15 +16,15 @@
   <body>
     <header></header>
     <main>
-      <div class="productPanelInfo w-100">
+      <div class="productPanelInfo w-100 p-3">
         <h1 class="text-center text-dark fw-bold">Control de Usuarios</h1>
-        <p class="text-center text-dark w-75 mx-auto mt-5 fs-5">
+        <p class="text-center text-dark w-75 mx-auto mt-4 fs-5">
           Bienvenido, este es el panel de control de los usuarios Dawson. Como
-          admin podrás modificar el estado de los usuarios.
+          admin podrás modificar el estado de los usuarios.
         </p>
       </div>
 
-      <div class="table-responsive w-75 mx-auto">
+      <div class="table-responsive w-100 p-3">
         <table
           id="adminUsers"
           class="table table-bordered table-striped border border-3 mt-2 mx-auto"
@@ -43,8 +43,12 @@
         </table>
       </div>
 
-      <div class="productBanner">
-        <img src="../Resources/LogoDawson.png" alt="LogoDawson" />
+      <div class="productBanner text-center p-3">
+        <img
+          src="../Resources/LogoDawson.png"
+          alt="LogoDawson"
+          class="img-fluid"
+        />
       </div>
     </main>
 
