--- a/views/detailPage.html
+++ b/views/detailPage.html
@@ -17,6 +17,8 @@
     <header></header>
     <main>
       <div class="container">
+        <span class="numeritoCarritoDetail">0</span>
+
         <div class="row g-0" id="content">
           <div class="col-md-4" id="imgDetail"></div>
           <div class="col-md-8 containerDetail" id="containerDetail"></div>
