--- a/styles/detailPage.css
+++ b/styles/detailPage.css
@@ -3,3 +3,27 @@
   height: 100vh;
   min-height: 600px;
 }
+
+.divCarrito {
+  position: fixed;
+  bottom: 20px;
+  right: -40px;
+  z-index: 100;
+}
+
+.btnCarrito {
+  position: relative;
+}
+
+.numeritoCarrito {
+  position: absolute;
+  top: -10px;
+  right: -10px;
+  background-color: red;
+  color: white;
+  border-radius: 50%;
+  width: 20px;
+  height: 20px;
+  text-align: center;
+  font-size: 14px;
+}
