--- a/views/detailPage.html
+++ b/views/detailPage.html
@@ -17,8 +17,16 @@
     <header></header>
     <main>
       <div class="container">
-        <span class="numeritoCarritoDetail">0</span>
-
+        <div class="d-flex justify-content-end me-5 divCarrito">
+          <a
+            href="./carrito.html"
+            id="Carrito"
+            class="btn btn-danger m-3 btnCarrito"
+            ><i class="fa-solid fa-cart-shopping"></i
+            ><i class="bi bi-cart-fill"></i>
+            <span class="numeritoCarrito" id="numeritoCarrito">0</span>
+          </a>
+        </div>
         <div class="row g-0" id="content">
           <div class="col-md-4" id="imgDetail"></div>
           <div class="col-md-8 containerDetail" id="containerDetail"></div>
@@ -31,6 +39,11 @@
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+      crossorigin="anonymous"
+    ></script>
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+    <script
+      src="https://kit.fontawesome.com/1cc1d82c1f.js"
       crossorigin="anonymous"
     ></script>
   </body>
